# ciaobot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  INTEGRATIONS.md  LICENSE  PWA_API.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-on-main.yml
ciao/: __init__.py  adoption_report.py  app_settings.py  bug_report.py  cleanup_sdk_blobs.py  cli.py  config.py  control_plane.py  control_surface_benchmark.py  control_surfaces.py  critique.py  dag.py  debug_report.py  dependency_review.py  dev.py  error_log.py  execution_modes.py  fts_search.py  git_sync.py  gws_auth.py  gws_skills.py  insights.py  instance_lock.py  job_runs.py  jsonio.py  local_session.py  loops.py  main.py  mcp_server.py  memory_injector.py  memory_proposals.py  memory_tool.py  menubar.py  menubar_prefs.py  model_tiers.py  models.py  package_smoke.py  package_version.py  project_doc_update.py  provider_service.py  (+25 more)
ciao/context/: __init__.py  entity_tagger.py
ciao/observability/: __init__.py  hooks.py
ciao/providers/: __init__.py  base.py  claude.py  codex.py  ollama.py  oneshot.py  openrouter.py  permission_gate.py  pi.py  routing.py  stdio_rpc.py
ciao/stock/: __init__.py  schedules.json
ciao/stock/agents/: comment-analyzer.md  doc-updater.md  memory.md  pr-test-analyzer.md  researcher.md  secretary.md  silent-failure-hunter.md
ciao/stock/commands/: critique.md  interrogation.md  remember.md
ciao/stock/deploy/: Ciaobot.icns  CiaobotServer.icns  com.ciao.menubar.plist.tmpl  com.ciao.server.plist.tmpl
ciao/stock/public/: CLAUDE.md
ciao/stock/schedules/: weekly-review-template.md
ciao/stock/workspace/: AGENTS.md  CIAO_CUSTOMIZATION.md  CLAUDE.md
ciao/web/: __init__.py  agent_assets.py  app.py  auth.py  chat_broker.py  commands.py  file_snapshots.py  project_chats.py  push.py  routes_api.py  routes_auth.py  routes_chat.py  routes_helpers.py  routes_push.py  security.py
ciao/web/routes/: __init__.py
ciao/web/static/: index.html  manifest.json  sw.js
deploy/homebrew/: ciao.rb  ciaobot.rb
docs/: ARCHITECTURE.md  CREDITS.md  DEVELOPMENT.md  MCP.md  skills.md
docs/plans/: CODEX_CLI_PROVIDER_PLAN.md  GEMINI_CLI_PROVIDER_PLAN.md
docs/superpowers/plans/: 2026-07-15-compact-chat-activity.md  2026-07-15-conversation-forks.md  2026-07-15-cross-provider-subchats.md
docs/superpowers/specs/: 2026-07-15-compact-chat-activity-design.md  2026-07-15-conversation-forks-design.md  2026-07-15-cross-provider-subchats-design.md
scripts/: README.md  backfill_insights.py  cleanup_sdk_blobs.py  configure-github-branches.sh  create-chat.py  dev-commands.sh  dev.sh  ensure-deps.sh  gws-auth-helper.py  gws-profile.sh  install-custom-skills.sh  make_menubar_template_icons.py  memory-cli.py  prepare-release  run-ciao.sh  skills_add.py  skills_sync.py  sync-claude-agents-to-pi.py  update-homebrew-tap.sh  vault-lint.py  vault-search.py  vault_index.py
skills/ciao-release/: SKILL.md
skills/gws-shared/: SKILL.md
tests/: conftest.py  test_active_chats_route.py  test_adoption_report.py  test_agent_assets.py  test_app_security_headers.py  test_app_settings.py  test_auth_security.py  test_auto_mode_defaults.py  test_auto_title.py  test_bug_report.py  test_chat_broker.py  test_chat_continue_route.py  test_chat_fork.py  test_chat_fork_route.py  test_chat_handover.py  test_chat_messages_archived.py  test_chat_messages_interrupted.py  test_chat_messages_session_rotation.py  test_chat_prompt_route.py  test_chat_retry.py  test_chat_subagents.py  test_ci_workflow.py  test_claude_pi_parity.py  test_cli.py  test_codex_live_smoke.py  test_codex_provider.py  test_codex_routes.py  test_commands.py  test_commands_api.py  test_config_role.py  test_control_surface_benchmark.py  test_critique.py  test_dag.py  test_debug_issues_route.py  test_debug_report.py  test_dependency_review.py  test_deploy_cleanup.py  test_dev_cli.py  test_entity_tagger.py  test_env_vars_documented.py  (+101 more)
tests/providers/: test_pi.py
web/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/.impeccable/: hook.cache.json
web/public/: manifest.json  sw.js
web/scripts/: build-icons.mjs
web/src/: App.vue  main.ts  router.ts
web/src/components/: ChatLayout.vue  ChatPanel.vue  CommandPaletteModal.vue  CsvViewer.vue  ExcalidrawViewer.vue  FileViewerModal.vue  GettingStartedChecklist.vue  HomeRecentChats.vue  InAppToast.vue  LoginView.vue  ModelSelector.vue  NewLoopForm.vue  NewScheduleForm.vue  NotificationBell.vue  OnboardingCard.vue  PaneHeader.vue  PinnedFilePanel.vue  ProductTour.vue  ProjectSidebar.vue  ProjectView.vue  ProviderSubchatPanel.vue  RestartOverlay.vue  SchedulePanel.vue  SchedulesView.vue  SettingsView.vue  StartupView.vue  SubagentPanel.vue  VoiceRecorder.vue
web/src/lib/: api.ts  appTitle.test.ts  appTitle.ts  automationWorkspace.test.ts  automationWorkspace.ts  chatActivity.test.ts  chatActivity.ts  chatFork.test.ts  chatFork.ts  commentContext.test.ts  commentContext.ts  csv.test.ts  csv.ts  filePaths.test.ts  filePaths.ts  fixError.test.ts  fixError.ts  gettingStarted.test.ts  gettingStarted.ts  markdownFrontmatter.ts  modelSections.test.ts  modelSections.ts  onboarding.test.ts  onboarding.ts  openWorkspaceFile.ts  pendingBuckets.test.ts  pendingBuckets.ts  productTour.test.ts  productTour.ts  push.ts  rateLimit.test.ts  (+11 more)
(+630 files in other folders)
