[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciao"
version = "0.2.0"
description = "Ciao personal assistant server."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
  "claude-agent-sdk>=0.1.72",
  "openai>=2.33.0",
  "starlette>=0.45.0,<1",
  "uvicorn[standard]>=0.34.0,<1",
  "itsdangerous>=2.2.0,<3",
  "pyyaml>=6.0",
  "pywebpush>=2.0.0,<3",
  "cryptography>=41.0",
  # `websockets` is already pulled in transitively by uvicorn[standard].
  "httpx>=0.27,<1",
  "python-pptx",
]

[project.optional-dependencies]
test = [
  "build>=1.2.0,<2",
  "pytest>=8.3.0,<9",
  "pytest-asyncio>=0.26.0,<1",
]
# Local on-device voice transcription (Apple Silicon only).
voice-local = [
  "mlx-whisper>=0.4.0",
]

[project.scripts]
ciao = "ciao.cli:main"
ciao-public-preflight = "ciao.public_release:main"
ciao-package-smoke = "ciao.package_smoke:main"

[tool.setuptools]
packages = ["ciao", "ciao.context", "ciao.observability", "ciao.providers", "ciao.stock", "ciao.web"]

[tool.setuptools.package-data]
"ciao.web" = ["static/**/*"]
"ciao.stock" = [
  "agents/*.md",
  "commands/*.md",
  "deploy/*.tmpl",
  "public/*.md",
  "workspace/*.md",
  "skills/.gitkeep",
  "schedules.json",
  "schedules/*.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
