[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciao"
version = "0.2.0"
description = "Ciaobot personal assistant server."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
  "claude-agent-sdk==0.2.110",
  "openai==2.44.0",
  "starlette==0.52.1",
  "uvicorn[standard]==0.50.2",
  "itsdangerous==2.2.0",
  "pyyaml==6.0.3",
  "pywebpush==2.3.0",
  "cryptography==49.0.0",
  # `websockets` is already pulled in transitively by uvicorn[standard].
  "httpx==0.28.1",
  "python-pptx==1.0.2",
  "notebooklm-py==0.7.3",
  "playwright==1.61.0",
]

[project.optional-dependencies]
test = [
  "build==1.5.0",
  "pytest==8.4.2",
  "pytest-asyncio==0.26.0",
]
# Local on-device voice transcription (Apple Silicon only).
voice-local = [
  "mlx-whisper==0.4.3",
]
# macOS menu bar companion (`ciao menubar`).
menubar = [
  "rumps==0.4.0",
]

[project.scripts]
ciao = "ciao.cli:main"
ciao-public-preflight = "ciao.public_release:main"
ciao-package-smoke = "ciao.package_smoke:main"
ciao-prepare-release = "ciao.release:main"

[tool.setuptools]
packages = ["ciao", "ciao.context", "ciao.observability", "ciao.providers", "ciao.stock", "ciao.web"]

[tool.setuptools.package-data]
"ciao.web" = ["static/**/*"]
"ciao.stock" = [
  "agents/*.md",
  "commands/*.md",
  "deploy/*.tmpl",
  "deploy/*.icns",
  "public/*.md",
  "workspace/*.md",
  "skills/.gitkeep",
  "skills/**/*",
  "schedules.json",
  "schedules/*.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
